Fixed issue with pattern images not showing up in Firefox

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -127,16 +127,18 @@ footer p {
 }
 
 #patterns-list .card .image {
+  margin: 0 auto 0.5em;
   position: relative;
   overflow: hidden;
+  height: 200px;
+  width: 200px;
   padding-bottom: 100%;
-  margin-bottom: 0.5em;
 }
 
 #patterns-list .card .image img {
   position: absolute;
   max-width: 100%;
-  max-height: 100%;
+  height: auto;
   top: 50%;
   left: 50%;
   -webkit-transform: translateX(-50%) translateY(-50%);
