--- a/resources/assets/sass/_modules/_patterns/_patterns.sass
+++ b/resources/assets/sass/_modules/_patterns/_patterns.sass
@@ -6,15 +6,17 @@
     padding: 0.5em
 
     .image
+        margin: 0 auto 0.5em
         position: relative
         overflow: hidden
+        height: 200px
+        width: 200px
         padding-bottom: 100%
-        margin-bottom: 0.5em
 
         img
             position: absolute
             max-width: 100%
-            max-height: 100%
+            height: auto
             top: 50%
             left: 50%
             transform: translateX(-50%) translateY(-50%)
